--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /public/storage
 /storage/*.key
 /vendor
+composer.lock
 .env
 .env.backup
 .phpunit.result.cache
@@ -12,3 +13,4 @@ npm-debug.log
 yarn-error.log
 .idea
 .data
+.vscode
