--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "fideloper/proxy": "^4.0",
         "bensampo/laravel-enum": "^4.1",
         "doctrine/dbal": "^3.2",
+        "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.65",
+        "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
