--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=library
-DB_USERNAME=library
-DB_PASSWORD=library
+DB_DATABASE=request_gate
+DB_USERNAME=request_gate
+DB_PASSWORD=request_gate
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
