--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,4 +41,4 @@ DeployDev:
   - composer install --ignore-platform-reqs --no-scripts -q && composer dump-autoload -q
   - echo "$DEV_DEPLOY_ENV_FILE" > .env && echo "OK" > public/health.html
   - rsync -azPq --exclude='.git' ./ $DEV_DEPLOY_USER@$DEV_DEPLOY_HOST:$DEV_DEPLOY_DIR/
-  - ssh $DEV_DEPLOY_USER@$DEV_DEPLOY_HOST "cd $DEV_DEPLOY_DIR && php artisan cache:clear & php artisan route:cache & php artisan config:clear && php artisan migrate"
+  - ssh $DEV_DEPLOY_USER@$DEV_DEPLOY_HOST "cd $DEV_DEPLOY_DIR && php artisan config:clear && php artisan migrate"
